--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'net.sf.jung:jung-algorithms:2.0.1'
     implementation 'net.sf.jung:jung-graph-impl:2.0.1'
     implementation  'org.gephi:gephi-toolkit:0.9.2-all'
+    implementation 'nl.cwts:networkanalysis:1.1.0'
 }
 
 test {
