--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    jcenter()
     flatDir { dirs 'libs' }
 }
 
@@ -22,6 +23,10 @@ dependencies {
     implementation 'net.sf.jung:jung-graph-impl:2.0.1'
     implementation 'org.gephi:gephi-toolkit:0.9.2-all'
     implementation 'nl.cwts:networkanalysis:1.1.0'
+    compile('org.jetbrains.exposed:exposed-core:0.31.1')
+    compile('org.jetbrains.exposed:exposed-dao:0.31.1')
+    compile('org.jetbrains.exposed:exposed-jdbc:0.31.1')
+    compile("org.xerial:sqlite-jdbc:3.30.1")
 }
 
 test {
